--- a/index.html
+++ b/index.html
@@ -41,11 +41,33 @@
         </div>
       </div>
     </nav>
+    <main class="main">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="header-content my-auto">
+              <h1>Be the Penguins <br>
+                <span>of Winter</span>
+              </h1>
+              <p>Lorem Ipsum is simply dummy text of the printing
+                and typesetting industry.</p>
+              <a href="#" class="cmn-btn"><i class="fas fa-shopping-cart"></i>Buy Now</a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="header-img">
+              <img class="img-fluid" src="images/shop/model.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </header>
   <!-- Header Area End -->
 
 
-
+  <!-- Fontawesome -->
+  <script src="https://kit.fontawesome.com/c866efc306.js" crossorigin="anonymous"></script>
   <!-- Bootstrap JavaScript Laibraries -->
   <script src="js/bootstrap.bundle.min.js"></script>
 
