--- a/index.html
+++ b/index.html
@@ -65,6 +65,101 @@
   </header>
   <!-- Header Area End -->
 
+  <!-- Wemen Area Start -->
+  <section class="women cmn-margin">
+    <div class="container">
+      <h2 class="section-title">W0Man Jacket</h2>
+      <div class="row gx-5">
+        <div class="col-lg-4">
+          <div class="women-card">
+            <img class="img-fluid" src="images/shop/jacket-1.png" alt="">
+            <h4 class="product-title">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="price-with-btn d-flex justify-content-between align-items-center">
+              <h4 class="price">$234</h4>
+              <a href="#" class="cmn-btn"><i class="fas fa-shopping-cart"></i>Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="women-card">
+            <img class="img-fluid" src="images/shop/jacket-2.png" alt="">
+            <h4 class="product-title">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="price-with-btn d-flex justify-content-between align-items-center">
+              <h4 class="price">$234</h4>
+              <a href="#" class="cmn-btn"><i class="fas fa-shopping-cart"></i>Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="women-card">
+            <img class="img-fluid" src="images/shop/jacket-3.png" alt="">
+            <h4 class="product-title">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="price-with-btn d-flex justify-content-between align-items-center">
+              <h4 class="price">$234</h4>
+              <a href="#" class="cmn-btn"><i class="fas fa-shopping-cart"></i>Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Wemen Area End -->
+
+
+  <!-- Men Area Start -->
+  <section class="women cmn-margin">
+    <div class="container">
+      <h2 class="section-title">Man Jacket</h2>
+      <div class="row gx-5">
+        <div class="col-lg-4">
+          <div class="women-card">
+            <img class="img-fluid" src="images/shop/jacket-4.png" alt="">
+            <h4 class="product-title">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="price-with-btn d-flex justify-content-between align-items-center">
+              <h4 class="price">$234</h4>
+              <a href="#" class="cmn-btn"><i class="fas fa-shopping-cart"></i>Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="women-card">
+            <img class="img-fluid" src="images/shop/jacket-5.png" alt="">
+            <h4 class="product-title">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="price-with-btn d-flex justify-content-between align-items-center">
+              <h4 class="price">$234</h4>
+              <a href="#" class="cmn-btn"><i class="fas fa-shopping-cart"></i>Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="women-card">
+            <img class="img-fluid" src="images/shop/jacket-6.png" alt="">
+            <h4 class="product-title">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="price-with-btn d-flex justify-content-between align-items-center">
+              <h4 class="price">$234</h4>
+              <a href="#" class="cmn-btn"><i class="fas fa-shopping-cart"></i>Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Men Area End -->
+
+
+  
 
   <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/c866efc306.js" crossorigin="anonymous"></script>
