--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#"><img class="w-5" src="images/logo/logo.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+          <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -44,7 +43,7 @@
     <main class="main">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12">
             <div class="header-content my-auto">
               <h1>Be the Penguins <br>
                 <span>of Winter</span>
@@ -54,7 +53,7 @@
               <a href="#" class="cmn-btn"><i class="fas fa-shopping-cart"></i>Buy Now</a>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-12">
             <div class="header-img">
               <img class="img-fluid" src="images/shop/model.png" alt="">
             </div>
@@ -69,8 +68,8 @@
   <section class="women cmn-margin">
     <div class="container">
       <h2 class="section-title">W0Man Jacket</h2>
-      <div class="row gx-5">
-        <div class="col-lg-4">
+      <div class="row gx-5 gy-md-5 gy-sm-3 gx-sm-2">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="women-card">
             <img class="img-fluid" src="images/shop/jacket-1.png" alt="">
             <h4 class="product-title">Yellow Coat Jacket </h4>
@@ -82,7 +81,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="women-card">
             <img class="img-fluid" src="images/shop/jacket-2.png" alt="">
             <h4 class="product-title">Yellow Coat Jacket </h4>
@@ -94,7 +93,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="women-card">
             <img class="img-fluid" src="images/shop/jacket-3.png" alt="">
             <h4 class="product-title">Yellow Coat Jacket </h4>
@@ -116,8 +115,8 @@
   <section class="women cmn-margin">
     <div class="container">
       <h2 class="section-title">Man Jacket</h2>
-      <div class="row gx-5">
-        <div class="col-lg-4">
+      <div class="row gx-5 gy-md-5 gy-sm-3 gx-sm-2">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="women-card">
             <img class="img-fluid" src="images/shop/jacket-4.png" alt="">
             <h4 class="product-title">Yellow Coat Jacket </h4>
@@ -129,7 +128,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="women-card">
             <img class="img-fluid" src="images/shop/jacket-5.png" alt="">
             <h4 class="product-title">Yellow Coat Jacket </h4>
@@ -141,7 +140,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="women-card">
             <img class="img-fluid" src="images/shop/jacket-6.png" alt="">
             <h4 class="product-title">Yellow Coat Jacket </h4>
@@ -159,7 +158,51 @@
   <!-- Men Area End -->
 
 
-  
+  <!-- Contact Area Start -->
+  <section class="contact">
+    <div class="container">
+      <div class="row gx-5 align-items-center">
+        <div class="col-lg-6 col-md-12">
+          <div class="contact-detail my-3 d-flex align-items-center">
+            <div class="contact-img">
+              <img class="img-fluid" src="images/shop/house.png" alt="">
+            </div>
+            <div class="contact-content">
+              <h4>Find the Perfect Fit</h4>
+              <p>Everybody is different, which is why we
+                offer styles for every body.</p>
+            </div>
+          </div>
+          <div class="contact-detail my-3 d-flex align-items-center">
+            <div class="contact-img">
+              <img class="img-fluid" src="images/shop/box.png" alt="">
+            </div>
+            <div class="contact-content">
+              <h4>Free Exchanges</h4>
+              <p>One of the many reasons you can shop
+                with peace of mind.</p>
+            </div>
+          </div>
+          <div class="contact-detail my-3 d-flex align-items-center">
+            <div class="contact-img">
+              <img class="img-fluid" src="images/shop/question.png" alt="">
+            </div>
+            <div class="contact-content">
+              <h4>Contact Our Seller</h4>
+              <p>They are here to help you. That's quite
+                literally what we pay them for.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-12 mt-md-5 mt-sm-5">
+          <div class="contact-thumnail">
+            <img class="img-fluid" src="images/shop/shopping.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Contact Area End -->
 
   <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/c866efc306.js" crossorigin="anonymous"></script>
